[package]
name = "kyber_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqcrypto-kyber = "0.7.6"
pqc_kyber = {version = "0.6.0", features = ["kyber512", "kyber1024", "90s"]}
rand = "0.8.5"
